--- a/CardsOfHearthstone/app/src/main/AndroidManifest.xml
+++ b/CardsOfHearthstone/app/src/main/AndroidManifest.xml
@@ -19,10 +19,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".RecyclerActivity"
             android:label="@string/title_activity_recycler"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name =".SettingsActivity"
+            android:label ="Settings"
+            android:parentActivityName =".MainActivity">
+            <meta-data
+                android:name ="android.support.PARENT_ACTIVITY"
+                android:value =".MainActivity" />
+        </activity>
     </application>
 
 </manifest>
