--- a/CardsOfHearthstone/app/src/main/AndroidManifest.xml
+++ b/CardsOfHearthstone/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
+
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +22,7 @@
         <activity
             android:name=".RecyclerActivity"
             android:label="@string/title_activity_recycler"
+            android:configChanges="orientation"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".SettingsActivity"
