--- a/CardsOfHearthstone/app/build.gradle
+++ b/CardsOfHearthstone/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    implementation'com.squareup.picasso:picasso:2.71828'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation files('libs/unirest-java-1.4.10-SNAPSHOT-withDependency-ShadedForAndroid.jar')
 }
